--- a/CustomSteamTools/TF2TradingToolkit/ConsoleWindow.xaml
+++ b/CustomSteamTools/TF2TradingToolkit/ConsoleWindow.xaml
@@ -1,29 +1,30 @@
-﻿<Window x:Class="TF2TradingToolkit.ConsoleWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:e="http://schemas.codeplex.com/elysium"
-        xmlns:ep="http://schemas.codeplex.com/elysium/params"
-        xmlns:ex="http://schemas.extra.com/ui"
-        xmlns:local="clr-namespace:TF2TradingToolkit"
-        mc:Ignorable="d"
-        ep:Design.Theme="Dark"
-        ep:Manager.Theme="Dark"
-        ep:Design.AccentBrush="{x:Static e:AccentBrushes.Orange}"
-        ep:Manager.AccentBrush="{x:Static e:AccentBrushes.Orange}"
-        ep:Design.ContrastBrush="White"
-        ep:Manager.ContrastBrush="White"
-        BorderBrush="{x:Static e:AccentBrushes.Orange}"
-        Title="Console"
-        MinHeight="200"
-        MinWidth="400"
-        Height="768"
-        Width="1024"
-        Icon="assets/smallnflat_terminal-24x.png"
-        Loaded="Window_Loaded"
-        Background="#FF171717"
-        Closing="Window_Closing">
+﻿<m:MetroWindow x:Class="TF2TradingToolkit.ConsoleWindow"
+               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+               xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+               xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+               xmlns:local="clr-namespace:TF2TradingToolkit"
+               xmlns:m="http://metro.mahapps.com/winfx/xaml/controls"
+               mc:Ignorable="d"
+               Title="TF2 Trading Toolkit Console"
+               MinHeight="200"
+               MinWidth="400"
+               Height="768"
+               Width="1024"
+               GlowBrush="{DynamicResource AccentColorBrush}"
+               Icon="assets/smallnflat_terminal-24x.png"
+               Loaded="Window_Loaded"
+               Closing="Window_Closing">
+  <m:MetroWindow.Resources>
+    <ResourceDictionary>
+      <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
+      </ResourceDictionary.MergedDictionaries>
+
+      <SolidColorBrush x:Key="TextBlockBorderBrush"
+                       Color="#FF666666" />
+    </ResourceDictionary>
+  </m:MetroWindow.Resources>
   <Grid>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="Auto" />
@@ -45,9 +46,8 @@
                  HorizontalScrollBarVisibility="Auto"
                  VerticalScrollBarVisibility="Auto"
                  BorderThickness="1"
-                 Background="#FF212121"
-                 BorderBrush="#FF444444">
-      <FlowDocument PageWidth="2000" />
+                 BorderBrush="{StaticResource TextBlockBorderBrush}">
+      <FlowDocument />
     </RichTextBox>
     <TextBlock x:Name="PromptTxt"
                Text="toolkit> "
@@ -64,8 +64,7 @@
              Grid.Column="1"
              Margin="5,0,5,5"
              BorderThickness="1"
-             Background="#FF212121"
-             BorderBrush="#FF444444" />
+             BorderBrush="{StaticResource TextBlockBorderBrush}" />
     <Button x:Name="ExecuteBtn"
             Content="Execute"
             Grid.Row="1"
@@ -74,4 +73,4 @@
             IsDefault="True"
             Click="ExecuteBtn_Click" />
   </Grid>
-</Window>
+</m:MetroWindow>
