--- a/CustomSteamTools/TF2TradingToolkit/MainWindow.xaml
+++ b/CustomSteamTools/TF2TradingToolkit/MainWindow.xaml
@@ -1,149 +1,32 @@
-﻿<e:Window x:Class="TF2TradingToolkit.MainWindow"
-          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-          xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-          xmlns:e="http://schemas.codeplex.com/elysium"
-          xmlns:ep="http://schemas.codeplex.com/elysium/params"
-          xmlns:ex="http://schemas.extra.com/ui"
-          xmlns:v="clr-namespace:TF2TradingToolkit.View"
-          mc:Ignorable="d"
-          ep:Design.Theme="Light"
-          ep:Manager.Theme="Light"
-          ep:Design.AccentBrush="{x:Static e:AccentBrushes.Orange}"
-          ep:Manager.AccentBrush="{x:Static e:AccentBrushes.Orange}"
-          BorderBrush="{x:Static e:AccentBrushes.Orange}"
-          Height="768"
-          Width="1415"
-          Title="TF2 Trading Toolkit"
-          WindowStartupLocation="CenterScreen"
-          ResizeMode="CanResizeWithGrip"
-          HasDropShadow="True"
-          Initialized="Window_Initialized"
-          Icon="assets/smallnflat_wrench-screwdriver-24x-buf.png"
-          Loaded="Window_Loaded"
-          MinWidth="1415"
-          MinHeight="768">
+﻿<m:MetroWindow x:Class="TF2TradingToolkit.MainWindow"
+               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+               xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+               xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+               xmlns:e="http://schemas.codeplex.com/elysium"
+               xmlns:ep="http://schemas.codeplex.com/elysium/params"
+               xmlns:ex="http://schemas.extra.com/ui"
+               xmlns:v="clr-namespace:TF2TradingToolkit.View"
+               xmlns:m="http://metro.mahapps.com/winfx/xaml/controls"
+               mc:Ignorable="d"
+               Height="768"
+               Width="1415"
+               Title="TF2 Trading Toolkit"
+               GlowBrush="{DynamicResource AccentColorBrush}"
+               WindowStartupLocation="CenterScreen"
+               ResizeMode="CanResizeWithGrip"
+               Initialized="Window_Initialized"
+               Icon="assets/smallnflat_wrench-screwdriver-24x-buf.png"
+               Loaded="Window_Loaded"
+               MinWidth="1415"
+               MinHeight="768">
   <Window.TaskbarItemInfo>
     <TaskbarItemInfo x:Name="ItemInfo" />
   </Window.TaskbarItemInfo>
-  <Window.Resources>
-    <ContextMenu x:Key="K_RefreshMenu"
-                 ep:Manager.Theme="Light">
-      <MenuItem Tag="SchemaRefreshItem"
-                Header="Refresh TF2 Game Schema"
-                Click="RefreshItem_Click" />
-      <MenuItem Tag="PricesRefreshItem"
-                Header="Refresh backpack.tf Prices"
-                Click="RefreshItem_Click" />
-      <MenuItem Header="Refresh Backpacks">
-        <MenuItem Tag="BackpackMyRefreshItem"
-                  Header="My Backpack"
-                  Click="RefreshItem_Click" />
-        <MenuItem Tag="BackpackOtherRefreshItem"
-                  Header="Others' Backpacks"
-                  Click="RefreshItem_Click" />
-      </MenuItem>
-      <MenuItem Tag="MarketRefreshItem"
-                Header="Refresh Steam Marketplace"
-                Click="RefreshItem_Click" />
-      <MenuItem Header="Refresh Player Data">
-        <MenuItem Tag="PlayerFriendsRefreshItem"
-                  Header="Friends"
-                  Click="RefreshItem_Click" />
-        <MenuItem Tag="PlayerAllRefreshItem"
-                  Header="All Loaded Players"
-                  Click="RefreshItem_Click" />
-      </MenuItem>
-      <Separator />
-      <MenuItem x:Name="AllRefreshItem"
-                Header="Refresh All Data"
-                Click="RefreshItem_Click" />
-    </ContextMenu>
-  </Window.Resources>
-
-  <Grid>
-    <TabControl x:Name="MainTabControl"
-                Margin="10 "
-                SelectionChanged="MainTabControl_SelectionChanged">
-      <TabItem x:Name="ItemsTab"
-               FontSize="24">
-        <TabItem.Header>
-          <StackPanel Orientation="Horizontal"
-                      Margin="5,0">
-            <Image Source="assets/smallnflat_search.png"
-                   Width="24"
-                   Height="24" />
-            <TextBlock Text="Items"
-                       VerticalAlignment="Top"
-                       Margin="10,0,0,0"
-                       FontWeight="SemiBold" />
-          </StackPanel>
-        </TabItem.Header>
-        <v:ItemsView x:Name="ItemsView" />
-      </TabItem>
-      <TabItem x:Name="BackpackTab"
-               FontSize="24">
-        <TabItem.Header>
-          <StackPanel Orientation="Horizontal"
-                      Margin="5,0">
-            <Image Source="assets/smallnflat_user.png"
-                   Width="24"
-                   Height="24" />
-            <TextBlock Text="Backpack"
-                       VerticalAlignment="Top"
-                       Margin="10,0,0,0"
-                       FontWeight="SemiBold" />
-          </StackPanel>
-        </TabItem.Header>
-
-        <v:BackpackView x:Name="BackpackView" />
-      </TabItem>
-      <TabItem x:Name="ClassifiedsTab"
-               FontSize="24">
-        <TabItem.Header>
-          <StackPanel Orientation="Horizontal"
-                      Margin="5,0">
-            <Image Source="assets/smallnflat_tag.png"
-                   Width="24"
-                   Height="24" />
-            <TextBlock Text="Classifieds"
-                       VerticalAlignment="Center"
-                       Margin="10,0,0,0"
-                       FontWeight="SemiBold" />
-          </StackPanel>
-        </TabItem.Header>
-
-        <v:ClassifiedsView x:Name="ClassifiedsView" />
-      </TabItem>
-      <TabItem x:Name="RangeTab"
-               FontSize="24">
-        <TabItem.Header>
-          <StackPanel Orientation="Horizontal"
-                      Margin="5,0">
-            <Image Source="assets/smallnflat_filter.png"
-                   Width="24"
-                   Height="24" />
-            <TextBlock Text="Range"
-                       Margin="10,0,0,0"
-                       FontWeight="SemiBold"
-                       VerticalAlignment="Center" />
-          </StackPanel>
-        </TabItem.Header>
-
-        <v:RangeView x:Name="RangeView" />
-      </TabItem>
-    </TabControl>
-
-    <!--Side Buttons-->
-    <StackPanel Orientation="Horizontal"
-                VerticalAlignment="Top"
-                Margin="10"
-                HorizontalAlignment="Right"
-                MaxHeight="32">
+  <m:MetroWindow.RightWindowCommands>
+    <m:WindowCommands>
       <Button x:Name="RefreshAllBtn"
               FontSize="14"
-              ContextMenu="{DynamicResource K_RefreshMenu}"
               Click="RefreshAllBtn_Click">
         <StackPanel Orientation="Horizontal">
           <Image Source="assets/smallnflat_cloud-sync-24x.png"
@@ -189,13 +72,78 @@
                      Margin="5,0" />
         </StackPanel>
       </Button>
-    </StackPanel>
+    </m:WindowCommands>
+  </m:MetroWindow.RightWindowCommands>
+  <Window.Resources>
+    <ContextMenu x:Key="K_RefreshMenu"
+                 ep:Manager.Theme="Light">
+      <MenuItem Tag="SchemaRefreshItem"
+                Header="Refresh TF2 Game Schema"
+                Click="RefreshItem_Click" />
+      <MenuItem Tag="PricesRefreshItem"
+                Header="Refresh backpack.tf Prices"
+                Click="RefreshItem_Click" />
+      <MenuItem Header="Refresh Backpacks">
+        <MenuItem Tag="BackpackMyRefreshItem"
+                  Header="My Backpack"
+                  Click="RefreshItem_Click" />
+        <MenuItem Tag="BackpackOtherRefreshItem"
+                  Header="Others' Backpacks"
+                  Click="RefreshItem_Click" />
+      </MenuItem>
+      <MenuItem Tag="MarketRefreshItem"
+                Header="Refresh Steam Marketplace"
+                Click="RefreshItem_Click" />
+      <MenuItem Header="Refresh Player Data">
+        <MenuItem Tag="PlayerFriendsRefreshItem"
+                  Header="Friends"
+                  Click="RefreshItem_Click" />
+        <MenuItem Tag="PlayerAllRefreshItem"
+                  Header="All Loaded Players"
+                  Click="RefreshItem_Click" />
+      </MenuItem>
+      <Separator />
+      <MenuItem x:Name="AllRefreshItem"
+                Header="Refresh All Data"
+                Click="RefreshItem_Click" />
+    </ContextMenu>
+  </Window.Resources>
 
-    <!--<Grid x:Name="ExpanderGrid">
-      <Expander x:Name="SettingsFlyout"
-                Style="{StaticResource FlyoutExpanderStyle}"
-                ExpandDirection="Right">
-      </Expander>
-    </Grid>-->
+  <Grid>
+    <TabControl x:Name="MainTabControl"
+                Margin="10"
+                SelectionChanged="MainTabControl_SelectionChanged">
+      <TabItem x:Name="ItemsTab"
+               FontSize="24"
+               Header="Items">
+        <v:ItemsView x:Name="ItemsView" />
+      </TabItem>
+      <TabItem x:Name="BackpackTab"
+               FontSize="24"
+               Header="Backpack">
+
+        <v:BackpackView x:Name="BackpackView" />
+      </TabItem>
+      <TabItem x:Name="ClassifiedsTab"
+               FontSize="24"
+               Header="Classifieds">
+
+        <v:ClassifiedsView x:Name="ClassifiedsView" />
+      </TabItem>
+      <TabItem x:Name="RangeTab"
+               FontSize="24"
+               Header="Range">
+
+        <v:RangeView x:Name="RangeView" />
+      </TabItem>
+    </TabControl>
+
+    <!--Side Buttons-->
+    <StackPanel Orientation="Horizontal"
+                VerticalAlignment="Top"
+                Margin="10"
+                HorizontalAlignment="Right"
+                MaxHeight="32">
+    </StackPanel>
   </Grid>
-</e:Window>
+</m:MetroWindow>
