--- a/CustomSteamTools/TF2TradingToolkit/SettingsWindow.xaml
+++ b/CustomSteamTools/TF2TradingToolkit/SettingsWindow.xaml
@@ -1,29 +1,24 @@
-﻿<e:Window x:Class="TF2TradingToolkit.SettingsWindow"
-          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-          xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-          xmlns:e="http://schemas.codeplex.com/elysium"
-          xmlns:ep="http://schemas.codeplex.com/elysium/params"
-          xmlns:ex="http://schemas.extra.com/ui"
-          xmlns:local="clr-namespace:TF2TradingToolkit"
-          mc:Ignorable="d"
-          ep:Design.Theme="Light"
-          ep:Manager.Theme="Light"
-          ep:Design.AccentBrush="{x:Static e:AccentBrushes.Orange}"
-          ep:Manager.AccentBrush="{x:Static e:AccentBrushes.Orange}"
-          BorderBrush="{x:Static e:AccentBrushes.Orange}"
-          Title="Settings"
-          MinHeight="100"
-          MinWidth="300"
-          Height="450"
-          Width="450"
-          ResizeMode="NoResize"
-          Icon="assets/smallnflat_wrench-screwdriver-24x-buf.png"
-          SizeToContent="Height"
-          WindowStartupLocation="CenterScreen"
-          ShowInTaskbar="False"
-          Loaded="Window_Loaded">
+﻿<m:MetroWindow x:Class="TF2TradingToolkit.SettingsWindow"
+               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+               xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+               xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+               xmlns:e="http://schemas.codeplex.com/elysium"
+               xmlns:ep="http://schemas.codeplex.com/elysium/params"
+               xmlns:ex="http://schemas.extra.com/ui"
+               xmlns:m="http://metro.mahapps.com/winfx/xaml/controls"
+               xmlns:local="clr-namespace:TF2TradingToolkit"
+               mc:Ignorable="d"
+               Title="Settings"
+               Height="470"
+               Width="450"
+               ResizeMode="NoResize"
+               Icon="assets/smallnflat_wrench-screwdriver-24x-buf.png"
+               SizeToContent="Height"
+               WindowStartupLocation="CenterScreen"
+               GlowBrush="{StaticResource AccentColorBrush}"
+               ShowInTaskbar="False"
+               Loaded="Window_Loaded">
   <Grid Margin="10">
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="Auto" />
@@ -142,7 +137,7 @@
                FontWeight="SemiBold"
                ToolTipService.ShowDuration="15000"
                Grid.ColumnSpan="2"
-               Margin="0,10,0,0"
+               Margin="0,20,0,5"
                Grid.Row="8">
       <TextBlock.ToolTip>
         <TextBlock>
@@ -210,4 +205,4 @@
               IsCancel="True" />
     </StackPanel>
   </Grid>
-</e:Window>
+</m:MetroWindow>
