--- a/CustomSteamTools/TF2TradingToolkit/View/ClassifiedsView.xaml
+++ b/CustomSteamTools/TF2TradingToolkit/View/ClassifiedsView.xaml
@@ -7,10 +7,7 @@
              xmlns:e="http://schemas.codeplex.com/elysium"
              xmlns:ep="http://schemas.codeplex.com/elysium/params"
              xmlns:ex="http://schemas.extra.com/ui"
-             ep:Design.Theme="Light"
-             ep:Manager.Theme="Light"
-             ep:Design.AccentBrush="{x:Static e:AccentBrushes.Orange}"
-             ep:Manager.AccentBrush="{x:Static e:AccentBrushes.Orange}"
+             xmlns:m="http://metro.mahapps.com/winfx/xaml/controls"
              mc:Ignorable="d"
              d:DesignHeight="667"
              d:DesignWidth="1387">
@@ -42,11 +39,11 @@
         </Grid.ColumnDefinitions>
 
         <ListBox x:Name="ItemSearchResultList"
-                 BorderThickness="1"
                  HorizontalContentAlignment="Stretch"
                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                  SelectionChanged="ItemSearchResultList_SelectionChanged"
-                 Height="208">
+                 Height="208"
+                 Style="{DynamicResource BorderedListBox}">
           <ListBox.ItemTemplate>
             <DataTemplate>
               <Grid Margin="5,0"
@@ -127,12 +124,12 @@
                 Click="ClassifiedsSearchBtn_Click" />
       </Grid>
 
-      <ProgressBar x:Name="ClassifiedsProgress"
-                   Grid.Row="3"
-                   Height="16"
-                   Margin="0,10,0,0"
-                   Visibility="Collapsed"
-                   IsIndeterminate="True" />
+      <m:MetroProgressBar x:Name="ClassifiedsProgress"
+                          Grid.Row="3"
+                          Height="16"
+                          Margin="0,10,0,0"
+                          Visibility="Collapsed"
+                          IsIndeterminate="True" />
 
       <TabControl x:Name="BuySellTabControl"
                   Margin="0,10,0,0"
@@ -149,7 +146,7 @@
                      HorizontalContentAlignment="Stretch"
                      ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                      Margin="0,0,5,10"
-                     BorderThickness="1">
+                     Style="{DynamicResource BorderedListBox}">
               <ListBox.ItemTemplate>
                 <DataTemplate>
                   <Grid ToolTip="{Binding Tooltip}">
@@ -166,7 +163,7 @@
                                   Click="FollowLink_Click" />
                       </ContextMenu>
                     </Grid.ContextMenu>
-                    
+
                     <Grid.ColumnDefinitions>
                       <ColumnDefinition Width="Auto" />
                       <ColumnDefinition Width="*" />
@@ -185,9 +182,10 @@
                     <Button Content="Offer"
                             Tag="{Binding OfferLink}"
                             Visibility="{Binding ShowOfferBtn}"
+                            Width="64"
+                            Margin="3"
                             Grid.Column="2"
-                            Click="Classifieds_OfferBtn_Click"
-                            BorderBrush="White" />
+                            Click="Classifieds_OfferBtn_Click" />
                   </Grid>
                 </DataTemplate>
               </ListBox.ItemTemplate>
@@ -203,6 +201,7 @@
                          FontSize="20" />
               <Button x:Name="ClassifiedsBestSellerBtn"
                       Content="Offer"
+                      Width="64"
                       Grid.Column="1"
                       Click="ClassifiedsBestSellerBtn_Click"
                       IsEnabled="False" />
@@ -235,7 +234,7 @@
                      HorizontalContentAlignment="Stretch"
                      ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                      Margin="0,0,5,10"
-                     BorderThickness="1">
+                     Style="{DynamicResource BorderedListBox}">
               <ListBox.ItemTemplate>
                 <DataTemplate>
                   <Grid ToolTip="{Binding Tooltip}">
@@ -256,9 +255,10 @@
                     <Button Content="Offer"
                             Tag="{Binding OfferLink}"
                             Visibility="{Binding ShowOfferBtn}"
+                            Width="64"
+                            Margin="3"
                             Grid.Column="2"
-                            Click="Classifieds_OfferBtn_Click"
-                            BorderBrush="White" />
+                            Click="Classifieds_OfferBtn_Click" />
                   </Grid>
                 </DataTemplate>
               </ListBox.ItemTemplate>
@@ -274,6 +274,7 @@
                          FontSize="20" />
               <Button x:Name="ClassifiedsBestBuyerBtn"
                       Content="Offer"
+                      Width="64"
                       Grid.Column="1"
                       Click="ClassifiedsBestBuyerBtn_Click"
                       IsEnabled="False" />
@@ -297,7 +298,8 @@
 
       <TextBlock Text="Deals"
                  FontSize="24"
-                 Margin="0,0,0,10" />
+                 Margin="0,0,0,10"
+                 FontWeight="SemiBold" />
       <Grid Grid.Row="1">
         <Grid.ColumnDefinitions>
           <ColumnDefinition Width="*" />
@@ -310,17 +312,17 @@
         </Grid.RowDefinitions>
 
         <TextBlock Text="Qualities:"
-                   FontSize="16"
+                   FontSize="18.667"
                    VerticalAlignment="Center"
                    Margin="10,0,0,0" />
         <TextBlock Text="Slots:"
-                   FontSize="16"
+                   FontSize="18.667"
                    VerticalAlignment="Center"
                    Grid.Row="1"
                    Margin="10,0,0,0" />
         <TextBlock Text="Classes:"
-                   FontSize="16"
-                   VerticalAlignment="Top"
+                   FontSize="18.667"
+                   VerticalAlignment="Center"
                    Grid.Row="2"
                    Margin="10,5,0,0" />
 
@@ -352,29 +354,33 @@
                   Content="Craftable"
                   IsThreeState="True"
                   IsChecked="True"
-                  Click="DealsCraftableCheck_Click" />
+                  Click="DealsCraftableCheck_Click"
+                  FontSize="13.333" />
         <CheckBox x:Name="DealsHalloweenCheck"
                   Content="Halloween"
                   IsThreeState="True"
                   IsChecked="{x:Null}"
                   Grid.Column="1"
-                  Click="DealsHalloweenCheck_Click" />
+                  Click="DealsHalloweenCheck_Click"
+                  FontSize="13.333" />
         <CheckBox x:Name="DealsBotkillerCheck"
                   Content="Botkillers"
                   IsThreeState="True"
                   IsChecked="{x:Null}"
                   Grid.Column="2"
-                  Click="DealsBotkillerCheck_Click" />
+                  Click="DealsBotkillerCheck_Click"
+                  FontSize="13.333" />
         <CheckBox x:Name="DealsAllClassCheck"
                   Content="All-Class"
                   ToolTip="Show all-class items"
                   IsChecked="True"
                   Grid.Column="3"
-                  Click="DealsAllClassCheck_Click" />
+                  Click="DealsAllClassCheck_Click"
+                  FontSize="13.333" />
       </Grid>
 
       <Grid Grid.Row="3"
-            Margin="10,0,0,0">
+            Margin="10,5,0,0">
         <Grid.ColumnDefinitions>
           <ColumnDefinition Width="Auto" />
           <ColumnDefinition Width="96" />
@@ -414,7 +420,7 @@
           <ListBox x:Name="DealsResultsList"
                    HorizontalContentAlignment="Stretch"
                    ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                   BorderThickness="1">
+                   Style="{DynamicResource BorderedListBox}">
             <ListBox.ItemTemplate>
               <DataTemplate>
                 <Grid ToolTipService.ShowDuration="15000">
@@ -476,9 +482,8 @@
                              Grid.Column="3" />
                   <Button Tag="{Binding OfferURL}"
                           Content="Offer"
-                          BorderBrush="White"
                           VerticalAlignment="Center"
-                          Margin="10,0"
+                          Padding="10,0"
                           Visibility="{Binding ShowOfferBtn}"
                           Grid.Column="4"
                           Click="Deals_OfferBtn_Click" />
@@ -492,7 +497,7 @@
           <ListBox x:Name="DealsExcludedList"
                    HorizontalContentAlignment="Stretch"
                    ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                   BorderThickness="1">
+                   Style="{DynamicResource BorderedListBox}">
             <ListBox.ItemTemplate>
               <DataTemplate>
                 <Grid ToolTipService.ShowDuration="15000">
@@ -505,7 +510,7 @@
                       <Label Content="{Binding Tooltip}" />
                     </StackPanel>
                   </Grid.ToolTip>
-                  
+
                   <Grid.ContextMenu>
                     <ContextMenu>
                       <MenuItem Header="Show In Classifieds"
@@ -544,7 +549,8 @@
                              Margin="10,0"
                              VerticalAlignment="Center"
                              TextWrapping="Wrap"
-                             Grid.Column="3" />
+                             Grid.Column="3"
+                             FontSize="14" />
                 </Grid>
               </DataTemplate>
             </ListBox.ItemTemplate>
@@ -552,10 +558,11 @@
         </TabItem>
       </TabControl>
 
-      <ProgressBar x:Name="DealsProgress"
-                   Height="16"
-                   Visibility="Collapsed"
-                   Grid.Row="5" />
+      <m:MetroProgressBar x:Name="DealsProgress"
+                          Height="16"
+                          Visibility="Collapsed"
+                          Foreground="{StaticResource AccentColorBrush}"
+                          Grid.Row="5" />
     </Grid>
   </Grid>
 </UserControl>
